--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.2",
+    "babel-loader": "^9.1.3",
+    "babel-preset-expo": "^11.0.12",
     "expo": "~51.0.21",
+    "expo-background-fetch": "~12.0.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.4",
+    "expo-network": "^6.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "~11.8.2",
+    "formik": "^2.4.6",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-background-fetch": "^4.2.5",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-vector-icons": "^10.1.0",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "@babel/core": "^7.24.9"
+  }
 }
