--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-preset-expo": "^11.0.12",
     "expo": "~51.0.21",
     "expo-background-fetch": "~12.0.1",
+    "expo-file-system": "^17.0.1",
+    "expo-image-manipulator": "^12.0.5",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.4",
@@ -31,7 +33,6 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
-    "react-native-background-fetch": "^4.2.5",
     "react-native-reanimated": "^3.14.0",
     "react-native-vector-icons": "^10.1.0",
     "uuid": "^10.0.0",
